--- a/index.html
+++ b/index.html
@@ -24,208 +24,240 @@
   <body>
     <!-- Header -->
     <header class="page-header">
-      <nav class="header-nav">
-        <a class="logo header-logo" href="./index.html"
-          >Web<span class="logo-part">Studio</span></a
-        >
-        <ul class="nav-list">
-          <li class="nav-item">
-            <a class="nav-link" href="./index.html">Studio</a>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
-          <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
-        </ul>
-      </nav>
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a class="logo header-logo" href="./index.html"
+            >Web<span class="logo-part">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Studio</a>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
+            <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
+          </ul>
+        </nav>
 
-      <address class="contacts">
-        <ul class="contacts-list">
-          <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts-item">
-            <a class="contacts-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <address class="contacts">
+          <ul class="contacts-list">
+            <li class="contacts-item">
+              <a class="contacts-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a class="contacts-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <!-- Main -->
     <main class="page-main">
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-btn" type="button">Order Service</button>
+        <div class="container hero-container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-btn" type="button">Order Service</button>
+        </div>
       </section>
 
       <!-- Features Section -->
-      <section class="features">
-        <h2 class="visually-hidden">Our Features</h2>
-        <ul class="features-list">
-          <li class="feature-item">
-            <h3 class="feature-title">Strategy</h3>
-            <p class="feature-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="feature-item">
-            <h3 class="feature-title">Punctuality</h3>
-            <p class="feature-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="feature-item">
-            <h3 class="feature-title">Diligence</h3>
-            <p class="feature-text">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="feature-item">
-            <h3 class="feature-title">Technologies</h3>
-            <p class="feature-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="section features">
+        <div class="container">
+          <h2 class="visually-hidden">Our Features</h2>
+          <ul class="features-list">
+            <li class="feature-item">
+              <h3 class="feature-title">Strategy</h3>
+              <p class="feature-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="feature-title">Punctuality</h3>
+              <p class="feature-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="feature-title">Diligence</h3>
+              <p class="feature-text">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="feature-title">Technologies</h3>
+              <p class="feature-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Team Section -->
-      <section class="team">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-card">
-            <img
-              src="./images/mark-guerrero.jpg"
-              alt="Product Designer Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-role">Product Designer</p>
-          </li>
+      <section class="section team">
+        <div class="container">
+          <h2 class="section-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-card">
+              <img
+                src="./images/mark-guerrero.jpg"
+                alt="Product Designer Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <div class="team-content-part">
+                <h3 class="team-name">Mark Guerrero</h3>
+                <p class="team-role">Product Designer</p>
+              </div>
+            </li>
 
-          <li class="team-card">
-            <img
-              src="./images/tom-ford.jpg"
-              alt="Frontend Developer Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Tom Ford</h3>
-            <p class="team-role">Frontend Developer</p>
-          </li>
+            <li class="team-card">
+              <img
+                src="./images/tom-ford.jpg"
+                alt="Frontend Developer Tom Ford"
+                width="264"
+                height="260"
+              />
+              <div class="team-content-part">
+                <h3 class="team-name">Tom Ford</h3>
+                <p class="team-role">Frontend Developer</p>
+              </div>
+            </li>
 
-          <li class="team-card">
-            <img
-              src="./images/camila-garcia.jpg"
-              alt="Marketing specialist Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Camila Garcia</h3>
-            <p class="team-role">Marketing</p>
-          </li>
+            <li class="team-card">
+              <img
+                src="./images/camila-garcia.jpg"
+                alt="Marketing specialist Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <div class="team-content-part">
+                <h3 class="team-name">Camila Garcia</h3>
+                <p class="team-role">Marketing</p>
+              </div>
+            </li>
 
-          <li class="team-card">
-            <img
-              src="./images/daniel-wilson.jpg"
-              alt="UI Designer Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Daniel Wilson</h3>
-            <p class="team-role">UI Designer</p>
-          </li>
-        </ul>
+            <li class="team-card">
+              <img
+                src="./images/daniel-wilson.jpg"
+                alt="UI Designer Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <div class="team-content-part">
+                <h3 class="team-name">Daniel Wilson</h3>
+                <p class="team-role">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Portfolio Section -->
 
-      <section class="portfolio">
-        <h2 class="section-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-card">
-            <img
-              src="./images/img-1.jpg"
-              alt="Banking App interface screens"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-title">Banking App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li class="portfolio-card">
-            <img
-              src="./images/img-2.jpg"
-              alt="Cashless Payment using phone"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-title">Cashless Payment</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
+      <section class="section portfolio">
+        <div class="container">
+          <h2 class="section-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-card">
+              <img
+                src="./images/img-1.jpg"
+                alt="Banking App interface screens"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-content-part">
+                <h3 class="portfolio-title">Banking App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-card">
+              <img
+                src="./images/img-2.jpg"
+                alt="Cashless Payment using phone"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-content-part">
+                <h3 class="portfolio-title">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
 
-          <li class="portfolio-card">
-            <img
-              src="./images/img-3.jpg"
-              alt="Meditation App on a laptop and a phone"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-title">Meditation App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
+            <li class="portfolio-card">
+              <img
+                src="./images/img-3.jpg"
+                alt="Meditation App on a laptop and a phone"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-content-part">
+                <h3 class="portfolio-title">Meditation App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
+            </li>
 
-          <li class="portfolio-card">
-            <img
-              src="./images/img-4.jpg"
-              alt="Taxi Service phone holder in car"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-title">Taxi Service</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li class="portfolio-card">
-            <img
-              src="./images/img-5.jpg"
-              alt="Screen Illustrations set"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-title">Screen Illustrations</h3>
-            <p class="portfolio-text">Design</p>
-          </li>
+            <li class="portfolio-card">
+              <img
+                src="./images/img-4.jpg"
+                alt="Taxi Service phone holder in car"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-content-part">
+                <h3 class="portfolio-title">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-card">
+              <img
+                src="./images/img-5.jpg"
+                alt="Screen Illustrations set"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-content-part">
+                <h3 class="portfolio-title">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
+              </div>
+            </li>
 
-          <li class="portfolio-card">
-            <img
-              src="./images/img-6.jpg"
-              alt="Smiling girl with a smartphone"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-title">Online Courses</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-        </ul>
+            <li class="portfolio-card">
+              <img
+                src="./images/img-6.jpg"
+                alt="Smiling girl with a smartphone"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-content-part">
+                <h3 class="portfolio-title">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- Footer -->
     <footer class="page-footer">
-      <a class="logo footer-logo" href="./index.html"
-        >Web<span class="logo-part">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container footer-container">
+        <a class="logo footer-logo" href="./index.html"
+          >Web<span class="logo-part">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
