--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     <!-- Footer -->
     <footer class="page-footer">
       <div class="container footer-container">
-        <a class="logo footer-logo" href="./index.html"
+        <a class="footer-logo" href="./index.html"
           >Web<span class="logo-part">Studio</span></a
         >
         <p class="footer-text">
